--- a/src/frontend/src/styles/global.css
+++ b/src/frontend/src/styles/global.css
@@ -119,7 +119,17 @@ body {
   color: var(--muted-foreground) !important;
 }
 
+/* -------------------------------------------------------------------------- */
 
+/* -------------------------------- Container ------------------------------- */
+
+.container-sm {
+  max-width: 500px;
+}
+
+.container-md {
+  max-width: 800px;
+}
 
 /* -------------------------------------------------------------------------- */
 
