IMPROVING TOURNAMENT MA GUEULE

--- a/src/frontend/src/styles/global.css
+++ b/src/frontend/src/styles/global.css
@@ -4,7 +4,8 @@
   --accent: #ffc400;
 
   --background: #0f0f0f;
-  --background-main: black;
+  --background-main: #1C1C1E;
+
 
   --muted: #141414;
   --muted-hover: #2e2e2e;
