2FA AND 42 OAUTH DONE ✅

--- a/src/frontend/src/styles/global.css
+++ b/src/frontend/src/styles/global.css
@@ -41,7 +41,10 @@ body {
 	width: 100vw;
   color: #fff;
   background-color: black;
+	overflow-x: hidden;
 }
+
+
 
 /* -------------------------------------------------------------------------- */
 /*                             OVERRIDE BOOTSTRAP                             */
