USER PAGE & IMPROVE HEADER ✅

--- a/src/frontend/src/styles/global.css
+++ b/src/frontend/src/styles/global.css
@@ -3,8 +3,8 @@
 
   --accent: #ffc400;
 
-  --background: #0f0f0f;
-  --background-main: #1C1C1E;
+  --background: #000000;
+  --background-main: #000000;
 
 
   --muted: #141414;
